CMAKE_MINIMUM_REQUIRED(VERSION 3.26)
project(LeetCode_Lession)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(1_Two_Sum)
add_subdirectory(2_Add_Two_Numbers)
add_subdirectory(9_Palindrome_Number)
add_subdirectory(13_Roman_to_Integer)
add_subdirectory(14_Longest_Common_Prefix)
add_subdirectory(21_Merge_Two_Sorted_Lists)
add_subdirectory(26_Remove_Duplicates_from_Sorted_Array)
###